--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -1,5 +1,5 @@
 
-@nav-bar-title-text-color: #fff;
-@tabbar-background-color: #d43c33;
+
+@tabbar-background-color: #4027d1;
 @tabbar-item-text-color:#fff;
 @tabbar-item-active-color:#fded90e5;
