--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -10,6 +10,6 @@ body {
 .page-nav-bar {
   background-color: #3296fa!important;
   .van-nav-bar__title, .van-icon {
-    color: #fff;
+    color: #fff !important;
   }
 }
